--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
