--- a/normalize.toml
+++ b/normalize.toml
@@ -35,8 +35,8 @@ blacklist = [
     "edit_request",
 ]
 
-# Blacklist Regular Expressions: Tags matching these regexes will be removed
-# These are full-match regexes, so they must match the entire tag
+# Blacklist Regular Expressions: Tags matching these regexps will be removed
+# These are full-match regexps, so they must match the entire tag
 blacklist_regexp = [
     "(\\d+s?|\\d+:\\d+)", # Numbers, years and aspect ratio
     ".*?_at_source",
@@ -54,7 +54,7 @@ blacklist_categories = ["pool"]
 # By default, underscores are replaced with spaces unless specified here
 keep_underscores = ["rating_explicit", "rating_questionable", "rating_safe"]
 
-# Remove prentheses suffixes that matches the tag's category like _(species) or
+# Remove parentheses suffixes that matches the tag's category like _(species) or
 # _(character) if it doesn't conflict with another tag (when
 # on_alias_conflict="ignore") 
 # Default: true
