--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
+*.parquet filter=lfs diff=lfs merge=lfs -text
